syntax = 'proto3';
package sms;

message SetConfigRequest {
  string newConfig = 1;
}

message SetConfigResponse {
  string updatedConfig = 1;
}

message SendVerificationCodeRequest {
  string to = 1;
}

message SendVerificationCodeResponse {
  string verificationSid = 1;
}

message VerifyRequest {
  string verificationSid = 1;
  string code = 2;
}

message VerifyResponse {
  bool verified = 1;
}

service Sms {
  rpc SetConfig(SetConfigRequest) returns (SetConfigResponse);
  rpc SendVerificationCode(SendVerificationCodeRequest) returns (SendVerificationCodeResponse);
  rpc Verify(VerifyRequest) returns (VerifyResponse);
}
